[✨feat/#36] 캘린더 > 월간 캘린더(기본 뷰) 정보 조회 API