@@ -23,7 +23,7 @@ public class ScrapServiceImpl implements ScrapService {
         LocalDate today = LocalDate.now();
         return scrapRepository.findByUserIdAndInternshipAnnouncement_Deadline(userId, today).stream()
                 .map(TodayScrapResponseDto::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
